--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
      <div> 
-         <h1></h1>
-         <p>sss</p>
+         <h1>First git</h1>
+         <p>some text</p>
      </div>
 </body>
 </html>
